# xvc-pynq-z2

./: readme.md
src/hw/hdl/: jtag_proc.v
src/hw/script/: pynq-z2-ps-preset.tcl  top.tcl
src/hw/xdc/: xvc-pynq-z2.xdc
src/os/: gen_fsbl.tcl
src/os/script/: gen_fsbl.tcl
src/sw/: makefile  xcv_server_param.h  xvc_server.c  xvc_server_param.h
src/sw/app/: CMakeLists.txt  xvc_server.c  xvc_server.h
src/sw/archlinux-linaro-gcc-7.3/: PKGBUILD
src/sw/script/: top.sh  yocto_build.sh
